fixing alignment of pagination selectors on the project page

--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -12,6 +12,7 @@
 
 .pagination {
   text-align: center;
+  padding: 0;
 }
 
 .pagination ul {
